--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 
   <main>
     <ul class="student-list">
-      <li><a href="students/ivan/index.html">Іван Коваль</a></li>
-      <li><a href="students/oksana/index.html">Оксана Петренко</a></li>
+      <li><a href="students/ivan/index.html">Іван НЕМКОВИЧ</a></li>
+      <li><a href="students/nadiya/index.html">Надія ВОЛОШКЕВИЧ</a></li>
       <!-- Додайте посилання на сторінки інших студентів тут -->
     </ul>
   </main>
 
   <footer>
-    <p>&copy; 2025 Командний проєкт групи "Front-End 101"</p>
+    <p>&copy; 2025 Командний проєкт групи "Front-End 24-09"</p>
   </footer>
 </body>
 </html>
