--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <ul class="student-list">
       <li><a href="students/ivan/index.html">Іван НЕМКОВИЧ</a></li>
       <li><a href="students/nadiya/index.html">Надія ВОЛОШКЕВИЧ</a></li>
+      <li><a href="students/ruslan/index.html">Руслан КОЗЛОВ</a></li>
       <!-- Додайте посилання на сторінки інших студентів тут -->
     </ul>
   </main>
