--- a/students/ruslan/index.html
+++ b/students/ruslan/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <header>
-    <h1>Ркслан КОЗЛОВ</h1>
+    <h1>Руслан КОЗЛОВ</h1>
     <p>Майбутній веброзробник</p>
   </header>
 
@@ -27,8 +27,10 @@
         <li><a href="#">Тестовий магазин</a></li>
       </ul>
     </section>
+    <a href="../../index.html">← Назад</a>
   </main>
 
+  
   <footer>
     <p>📧 Email: ruslan@gmail.com</p>
   </footer>
