--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
       <li><a href="students/ivan/index.html">Іван НЕМКОВИЧ</a></li>
       <li><a href="students/nadiya/index.html">Надія ВОЛОШКЕВИЧ</a></li>
       <li><a href="students/ruslan/index.html">Руслан КОЗЛОВ</a></li>
+      <li><a href="students/nadya/index.html">Надія</a></li>
+      <li><a href="students/burashkin/index.html">DEMCHENKO</a></li>
       <!-- Додайте посилання на сторінки інших студентів тут -->
     </ul>
   </main>
