Додав свої зміни у папці ivan

--- a/students/ivan2/index.html
+++ b/students/ivan2/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Портфоліо Івана Петренка</title>
+  <title>Немкович Іван Павлович</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
-    <h1>Іван Петренко</h1>
+    <h1>Іван Немкович</h1>
     <p>Майбутній веброзробник</p>
   </header>
 
@@ -29,7 +29,7 @@
   </main>
 
   <footer>
-    <p>📧 Email: ivan@example.com</p>
+    <p>📧 Email: nemkovicivan52@gmail.com</p>
   </footer>
 </body>
 </html>
