Додав свою сторінку у папку nadia

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       <li><a href="students/ivan/index.html">Іван НЕМКОВИЧ</a></li>
       <li><a href="students/nadiya/index.html">Надія ВОЛОШКЕВИЧ</a></li>
       <li><a href="students/ruslan/index.html">Руслан КОЗЛОВ</a></li>
+      <li><a href="students/nadia/index.html">Надія ВОЛОШКЕВИЧ</a></li>
       <!-- Додайте посилання на сторінки інших студентів тут -->
     </ul>
   </main>
