зміни файл index.html та зробив папку для kucher dmytro

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       <li><a href="students/ruslan/index.html">Руслан КОЗЛОВ</a></li>
       <li><a href="students/nadya/index.html">Надія</a></li>
       <li><a href="students/burashkin/index.html">DEMCHENKO</a></li>
+      <li><a href="students/kucher/index.html">KUCHER</a></li>
       <!-- Додайте посилання на сторінки інших студентів тут -->
     </ul>
   </main>
