--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
       <li><a href="students/nadya/index.html">Надія</a></li>
       <li><a href="students/burashkin/index.html">DEMCHENKO</a></li>
       <li><a href="students/kucher/index.html">KUCHER</a></li>
-      <li><a href="students/voloshkevych/index.html">Voloschkevych Nadia</a></li>
       <li><a href="students/ivan/index.html">Немкович Іван!</a></li>
+      <li><a href="students/voloshkevych/index.html">Nadia Voloschkevych </a></li>
       <!-- Додайте посилання на сторінки інших студентів тут -->
     </ul>
   </main>
