--- a/index.html
+++ b/index.html
@@ -13,10 +13,17 @@
 
   <main>
     <ul class="student-list">
-      <li><a href="students/ivan/index.html">Іван НЕМКОВИЧ</a></li>
-      <li><a href="students/nadiya/index.html">Надія ВОЛОШКЕВИЧ</a></li>
-      <li><a href="students/ruslan/index.html">Руслан КОЗЛОВ</a></li>
-      <li><a href="students/yura/index.html">Юрій Калюжний</a></li>
+      <li><a href="students/vituvis/index.html">Вітувіс Алефтина</a></li>
+      <li><a href="students/voloshkevich/index.html">Надія ВОЛОШКЕВИЧ</a></li>
+      <li><a href="students/garasuk/index.html">Сергій Гарасюк</a></li>
+      <li><a href="students/stanishevsky/index.html">Владислав Станішевкий</a></li>
+      <li><a href="students/gurina/index.html">Анастасія Гуріна</a></li>
+      <li><a href="students/demchenko/index.html">Дмитро Демченко</a></li>
+      <li><a href="students/nemkovych/index.html">Іван Немкович</a></li>
+      <li><a href="students/kucher/index.html">Дмитро Кучер</a></li>
+      <li><a href="students/partolyuk/index.html">Денис Партолюк</a></li>
+      <li><a href="students/koreva-oleg/index.html">Олег Корева</a></li>
+      <li><a href="students/koreva-sasha/index.html">Олександра Корева</a></li>
       <!-- Додайте посилання на сторінки інших студентів тут -->
     </ul>
   </main>
