--- a/students/nemkovych/index.html
+++ b/students/nemkovych/index.html
@@ -93,6 +93,14 @@
     <p>Email: <a href="mailto:nemkovicivan52@gmail.com">nemkovicivan52@gmail.com</a></p>
     <p>Телефон: <a href="tel:+380638225019">+38 (063) 822-50-19</a></p>
   </div>
+  <section class="projects">
+    <h2>Мої проєкти</h2>
+    <ul>
+      <li><a href="pract-2/index.html">Практична робота 2</a></li>
+    </ul>
+  </section>
+
+  <a href="../../index.html">← Назад на головну</a>
 
   <!-- Футер -->
   <footer class="footer">
