--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
   <li><a href="students/partoliyuk/index.html">Денис ПАРТОЛЮК</a></li>
   <li><a href="students/koreva-sasha/index.html">Олександра КОРЄВА</a></li>
   <li><a href="students/slaimen/index.html">Руслан СЛАЙМЕН</a></li>
-  <li><a href="students/ivan/index.html">Немкович Іван</a></li>
+  <li><a href="students/kaluzhny/index.html">Калюжний Юрій</a></li>
+  
 </ul>
   </main>
 
