--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </header>
 
   <main>
-<ul class="список-студентів">
+<ul class="student-list">
   <li><a href="students/vitivtsi/index.html">Вітуєць Алєгтина</a></li>
   <li><a href="students/voloskevych/index.html">Надія ВОЛОСКЕВИЧ</a></li>
   <li><a href="students/garasuk/index.html">Роман ГАРАСЮК</a></li>
