--- a/index.html
+++ b/index.html
@@ -13,19 +13,20 @@
 
   <main>
 <ul class="student-list">
-  <li><a href="students/vitivtsi/index.html">Вітуєць Алєгтина</a></li>
-  <li><a href="students/voloskevych/index.html">Надія ВОЛОСКЕВИЧ</a></li>
+  <li><a href="students/vituvis/index.html">Вітувіс Алєфтина</a></li>
+  <li><a href="students/voloskevych/index.html">Надія ВОЛОШКЕВИЧ</a></li>
   <li><a href="students/garasuk/index.html">Роман ГАРАСЮК</a></li>
-  <li><a href="students/stasiwschyk/index.html">Вікторія СТАЙСІВСЬКА</a></li>
-  <li><a href="students/bushansky/index.html">ДЕНИСЮК</a></li>
-  <li><a href="students/demenchok/index.html">Дмитро ДЕМЕНЧЮК</a></li>
+  <li><a href="students/pylypey/index.html">Владислав ПИЛИПЕЙ</a></li>
+  <li><a href="students/gorodnyuk/index.html">Олексій ГОРОДНЮК</a></li>
+  <li><a href="students/demchenko/index.html">Дмитро ДЕМЧЕНКО</a></li>
+  <li><a href="students/gurina/index.html">Настя ГУРІНА</a></li>
   <li><a href="students/nemkovych/index.html">Іван НЕМКОВИЧ</a></li>
   <li><a href="students/kucher/index.html">Дмитро КУЧЕР</a></li>
   <li><a href="students/partoliyuk/index.html">Денис ПАРТОЛЮК</a></li>
   <li><a href="students/koreva-sasha/index.html">Олександра КОРЄВА</a></li>
-  <li><a href="students/slaimen/index.html">Руслан СЛАЙМЕН</a></li>
-  <li><a href="students/kaluzhny/index.html">Калюжний Юрій</a></li>
-  
+  <li><a href="students/koreva-oleg/index.html">Олег КОРЄВА</a></li>
+  <li><a href="students/kozlov/index.html">Руслан КОЗЛОВ</a></li>
+  <li><a href="students/panov/index.html">Ігор ПАНОВ</a></li>
 </ul>
   </main>
 
