--- a/index.html
+++ b/index.html
@@ -13,20 +13,31 @@
 
   <main>
 <ul class="student-list">
-  <li><a href="students/vituvis/index.html">Вітувіс Алєфтина</a></li>
+  <li><a href="students/vituvis/index.html">Алєфтина Вітувіс</a></li>
   <li><a href="students/voloskevych/index.html">Надія ВОЛОШКЕВИЧ</a></li>
-  <li><a href="students/garasuk/index.html">Роман ГАРАСЮК</a></li>
-  <li><a href="students/pylypey/index.html">Владислав ПИЛИПЕЙ</a></li>
+  <li><a href="students/garasuk/index.html"> Сергій ГАРАСЮК</a></li>
   <li><a href="students/gorodnyuk/index.html">Олексій ГОРОДНЮК</a></li>
-  <li><a href="students/demchenko/index.html">Дмитро ДЕМЧЕНКО</a></li>
   <li><a href="students/gurina/index.html">Настя ГУРІНА</a></li>
-  <li><a href="students/nemkovych/index.html">Іван НЕМКОВИЧ</a></li>
-  <li><a href="students/kucher/index.html">Дмитро КУЧЕР</a></li>
-  <li><a href="students/partoliyuk/index.html">Денис ПАРТОЛЮК</a></li>
-  <li><a href="students/koreva-sasha/index.html">Олександра КОРЄВА</a></li>
-  <li><a href="students/koreva-oleg/index.html">Олег КОРЄВА</a></li>
+  <li><a href="students/dalekorey/index.html">Ангеліна ДАЛЕКОРЕЙ</a></li>
+  <li><a href="students/demchenko/index.html">Дмитро ДЕМЧЕНКО</a></li>
+  <li><a href="students/zinkovska/index.html">Таліна ЗІНЬКОВСЬКА</a></li>
+  <li><a href="students/karpov/index.html">Максим КАРПОВ</a></li>
   <li><a href="students/kozlov/index.html">Руслан КОЗЛОВ</a></li>
+  <li><a href="students/kompaniec/index.html">Максим КОМПАНІЄЦЬ</a></li>
+  <li><a href="students/koreva-oleg/index.html">Олег КОРЄВА</a></li>
+  <li><a href="students/koreva-sasha/index.html">Олександра КОРЄВА</a></li>
+  <li><a href="students/kuryashkina/index.html">Діана КУРЯШКІНА</a></li>
+  <li><a href="students/kucher/index.html">Дмитро КУЧЕР</a></li>
+  <li><a href="students/nemkovych/index.html">Іван НЕМКОВИЧ</a></li>
+  <li><a href="students/olaynuk/index.html">Ілля ОЛІЙНИК</a></li>
+  <li><a href="students/nemkovych/index.html">Іван НЕМКОВИЧ</a></li>
   <li><a href="students/panov/index.html">Ігор ПАНОВ</a></li>
+  <li><a href="students/panchenko/index.html">Наталія ПАНЧЕНКО</a></li>
+  <li><a href="students/partoliyuk/index.html">Денис ПАРТОЛЮК</a></li>
+  <li><a href="students/pylypey/index.html">Владислав ПИЛИПЕЙ</a></li>
+  <li><a href="students/prokopchuk/index.html">Олександр ПРОКОПЧУК</a></li>
+  <li><a href="students/savchuk/index.html">Оксана САВЧУК</a></li> 
+  <li><a href="students/stanishevky/index.html">Владислав СТАНІШЕВСКИЙ</a></li>
 </ul>
   </main>
 
