--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <ul class="student-list">
   <li><a href="students/vituvis/index.html">Алєфтина Вітувіс</a></li>
   <li><a href="students/voloskevych/index.html">Надія ВОЛОШКЕВИЧ</a></li>
-  <li><a href="students/garasuk/index.html"> Сергій ГАРАСЮК</a></li>
+  <li><a href="students/garasyuk/index.html"> Сергій ГАРАСЮК</a></li>
   <li><a href="students/gorodnyuk/index.html">Олексій ГОРОДНЮК</a></li>
   <li><a href="students/gurina/index.html">Настя ГУРІНА</a></li>
   <li><a href="students/dalekorey/index.html">Ангеліна ДАЛЕКОРЕЙ</a></li>
@@ -33,11 +33,11 @@
   <li><a href="students/nemkovych/index.html">Іван НЕМКОВИЧ</a></li>
   <li><a href="students/panov/index.html">Ігор ПАНОВ</a></li>
   <li><a href="students/panchenko/index.html">Наталія ПАНЧЕНКО</a></li>
-  <li><a href="students/partoliyuk/index.html">Денис ПАРТОЛЮК</a></li>
+  <li><a href="students/partolyuk/index.html">Денис ПАРТОЛЮК</a></li>
   <li><a href="students/pylypey/index.html">Владислав ПИЛИПЕЙ</a></li>
   <li><a href="students/prokopchuk/index.html">Олександр ПРОКОПЧУК</a></li>
   <li><a href="students/savchuk/index.html">Оксана САВЧУК</a></li> 
-  <li><a href="students/stanishevky/index.html">Владислав СТАНІШЕВСКИЙ</a></li>
+  <li><a href="students/stanishevsky/index.html">Владислав СТАНІШЕВСКИЙ</a></li>
 </ul>
   </main>
 
